--- a/plugins/net.refractions.udig.project.ui/plugin.xml
+++ b/plugins/net.refractions.udig.project.ui/plugin.xml
@@ -55,6 +55,13 @@
                icon="icons/etool16/newmap_wiz.gif"
                id="net.refractions.udig.project.ui.newMap"
                label="%map.new.label"/>
+         <action
+               class="net.refractions.udig.project.ui.internal.actions.OpenMapAction"
+               enablesFor="+"
+               icon="icons/obj16/project_obj.gif"
+               id="net.refractions.udig.project.ui.action2"
+               label="%map.action.open.name">
+         </action>
       </objectContribution>
      <objectContribution
             adaptable="true"
@@ -967,5 +974,49 @@
               class="net.refractions.udig.project.ui.internal.AddReshapedToMap"
               name="Add to Map">
         </action>
+     </extension>
+     <extension
+           id="net.refractions.udig.project.ui.map"
+           point="org.eclipse.ui.actionSets">
+        <actionSet
+              id="net.refractions.udig.project.ui.OpenProjectSet"
+              label="%OpenProjectSet.label"
+              visible="false">
+           <action
+                 class="net.refractions.udig.project.ui.internal.actions.OpenMapAction"
+                 definitionId="net.refractions.udig.project.ui.openMapCommand"
+                 icon="icons/obj16/project_obj.gif"
+                 id="net.refractions.udig.project.ui.openMapAction"
+                 label="%map.action.open.name"
+                 menubarPath="file/project.ext"
+                 style="push"
+                 tooltip="%project.action.open.tooltip">
+           </action>
+           <action
+                 allowLabelUpdate="true"
+                 class="net.refractions.udig.project.ui.internal.actions.CloseProject"
+                 enablesFor="+"
+                 id="net.refractions.udig.project.ui.closeProject"
+                 label="%project.close.label"
+                 menubarPath="file/project.ext"
+                 style="push"
+                 tooltip="%project.close.tooltip">
+              <enablement>
+                 <objectClass
+                       name="net.refractions.udig.project.IProject">
+                 </objectClass>
+              </enablement>
+           </action>
+           <action
+                 class="net.refractions.udig.project.ui.internal.actions.OpenProject"
+                 definitionId="net.refractions.udig.project.ui.openProjectCommand"
+                 icon="icons/obj16/project_obj.gif"
+                 id="net.refractions.udig.project.ui.openProject"
+                 label="%project.action.open.name"
+                 menubarPath="file/project.ext"
+                 style="push"
+                 tooltip="%project.action.open.tooltip">
+           </action>
+        </actionSet>
      </extension>
    </plugin>
