--- a/plugins/com.lowagie.itext/.classpath
+++ b/plugins/com.lowagie.itext/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/iText-2.1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itextasian-1.5.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry exported="true" kind="lib" path="lib/itext-1.5.2.jar" sourcepath="com.lowagie.itextsrc.zip"/>
-	<classpathentry exported="true" kind="lib" path="lib/itextasian-1.5.2.jar" sourcepath="com.lowagie.itextsrc.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
