--- a/plugins/net.refractions.udig.libs/.classpath
+++ b/plugins/net.refractions.udig.libs/.classpath
@@ -18,54 +18,55 @@
 	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-collections-3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-dbcp-1.2.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/commons-io-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-io-1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-jxpath-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-pool-1.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/eastwood-1.1.1-beta1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/eastwood-1.1.1-20090908.053756-6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/fop-0.94.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/geoapi-2.3-M1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/geoapi-pending-2.3-M1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/google-collect-snapshot-20080321.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-api-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-arcgrid-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-common-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-brewer-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-charts-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-coverage-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-cql-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-data-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-epsg-h2-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-geotiff-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-graph-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-image-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-imageio-ext-gdal-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-imagemosaic-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-db2-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-mysql-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-oracle-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-postgis-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-main-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-metadata-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-process-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-referencing-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-render-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-shapefile-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-shapefile-renderer-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-validation-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-wfs-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-wms-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-wps-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xml-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-core-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-filter-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-gml2-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-gml3-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-ows-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-wfs-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-wps-2.6-M2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-api-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-arcgrid-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-common-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-brewer-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-charts-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-coverage-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-cql-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-data-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-epsg-h2-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-geotiff-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-graph-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-image-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-imageio-ext-gdal-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-imagemosaic-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-db2-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-mysql-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-oracle-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-postgis-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-main-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-metadata-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-process-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-referencing-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-render-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-shapefile-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-shapefile-renderer-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-validation-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-wfs-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-wms-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-wps-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xml-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-core-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-filter-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-gml2-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-gml3-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-ows-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-wfs-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-wps-2.6-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/h2-1.1.104.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/hsqldb-1.8.0.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-arcgrid-1.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-customstreams-1.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-gdal-bindings-1.4.5.jar"/>
@@ -94,10 +95,10 @@
 	<classpathentry exported="true" kind="lib" path="lib/jts-1.10.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/miglayout-3.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-5.1.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/net.opengis.ows-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/net.opengis.wfs-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/net.opengis.wps-2.6-M2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/org.w3.xlink-2.6-M2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/net.opengis.ows-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/net.opengis.wfs-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/net.opengis.wps-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/org.w3.xlink-2.6-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/picocontainer-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/postgresql-8.4-701.jdbc3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/vecmath-1.3.2.jar"/>
