--- a/plugins/net.refractions.udig.libs/copy.properties
+++ b/plugins/net.refractions.udig.libs/copy.properties
@@ -27,5 +27,5 @@ mirror=http://mirrors.ibiblio.org/pub/mirrors/maven2
 
 repo=file:///${user.home}/.m2/repository
 
-geotools.version=2.6-SNAPSHOT
+geotools.version=2.6.0
 geoapi.version=2.3-M1
