--- a/plugins/net.refractions.udig.libs/.classpath
+++ b/plugins/net.refractions.udig.libs/.classpath
@@ -27,7 +27,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/geoapi-pending-2.3-M1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/google-collect-snapshot-20080321.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-api-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-arcgrid-2.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-arcgrid-2.6.0.jar" sourcepath="/Users/jody/java/geotools/2.6.0/modules/library/main"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-2.6.0.jar" sourcepath="/Users/jody/java/geotools/2.6.0/modules/library/jdbc"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-common-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-brewer-2.6.0.jar"/>
@@ -40,7 +40,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/gt-graph-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-image-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-imageio-ext-gdal-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-imagemosaic-2.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-imagemosaic-2.6.0.jar" sourcepath="/Users/jody/java/geotools/2.6.0/modules/plugin/shapefile/src"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-db2-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-mysql-2.6.0.jar"/>
