--- a/plugins/net.refractions.udig.libs/.classpath
+++ b/plugins/net.refractions.udig.libs/.classpath
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/gt-postgis-2.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/postgis-driver-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/batik-anim-1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/batik-awt-util-1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/batik-bridge-1.7.jar"/>
