--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -116,7 +116,9 @@ bin.includes = library.jar,\
                lib/xmlgraphics-commons-1.2.jar,\
                lib/xmlrpc-client-3.0.jar,\
                lib/xmlrpc-common-3.0.jar,\
-               lib/xpp3-1.1.3.4.O.jar
+               lib/xpp3-1.1.3.4.O.jar,\
+               lib/gt-postgis-2.6.0.jar,\
+               lib/postgis-driver-1.0.jar
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
