--- a/plugins/net.refractions.udig.libs/.classpath
+++ b/plugins/net.refractions.udig.libs/.classpath
@@ -1,5 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.5.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-log4j12-1.5.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-geocore-1.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/antlr-3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/antlr-runtime-3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-temporal-2.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-customstreams-1.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-netcdf-1.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-netcdf-core-1.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-utilities-1.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jiffle-1.0-20091221.120011-3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/netcdf-java-4.0.41.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/opendap-2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/utils-1.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/zonalstats-1.0-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/avalon-framework-api-4.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/avalon-framework-impl-4.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/batik-anim-1.7.jar"/>
@@ -73,7 +88,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/h2-1.1.104.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/hsqldb-1.8.0.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-arcgrid-1.0.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-customstreams-1.0.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-gdal-bindings-1.4.5b.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-gdaldted-1.0.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-gdalecw-1.0.5.jar"/>
@@ -85,12 +99,10 @@
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-gdalmrsid-1.0.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-gdalmrsidjp2-1.0.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-gdalnitf-1.0.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-geocore-1.0.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-imagereadmt-1.0.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-kakadu-1.0.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-kakadujni-5.2.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-tiff-1.0.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-utilities-1.0.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jaxb-impl-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jcommon-1.0.13.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jdom-1.0.jar"/>
