--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -81,7 +81,6 @@ bin.includes = library.jar,\
                lib/h2-1.1.104.jar,\
                lib/hsqldb-1.8.0.7.jar,\
                lib/imageio-ext-arcgrid-1.0.5.jar,\
-               lib/imageio-ext-customstreams-1.0.5.jar,\
                lib/imageio-ext-gdal-bindings-1.4.5b.jar,\
                lib/imageio-ext-gdaldted-1.0.5.jar,\
                lib/imageio-ext-gdalecw-1.0.5.jar,\
@@ -93,12 +92,10 @@ bin.includes = library.jar,\
                lib/imageio-ext-gdalmrsid-1.0.5.jar,\
                lib/imageio-ext-gdalmrsidjp2-1.0.5.jar,\
                lib/imageio-ext-gdalnitf-1.0.5.jar,\
-               lib/imageio-ext-geocore-1.0.5.jar,\
                lib/imageio-ext-imagereadmt-1.0.5.jar,\
                lib/imageio-ext-kakadu-1.0.5.jar,\
                lib/imageio-ext-kakadujni-5.2.6.jar,\
                lib/imageio-ext-tiff-1.0.5.jar,\
-               lib/imageio-ext-utilities-1.0.5.jar,\
                lib/jaxb-impl-1.3.jar,\
                lib/jcommon-1.0.13.jar,\
                lib/jdom-1.0.jar,\
@@ -123,7 +120,22 @@ bin.includes = library.jar,\
                lib/xmlgraphics-commons-1.2.jar,\
                lib/xmlrpc-client-3.0.jar,\
                lib/xmlrpc-common-3.0.jar,\
-               lib/xpp3-1.1.3.4.O.jar
+               lib/xpp3-1.1.3.4.O.jar,\
+               lib/antlr-3.2.jar,\
+               lib/antlr-runtime-3.2.jar,\
+               lib/gt-temporal-2.6.1.jar,\
+               lib/imageio-ext-customstreams-1.1-SNAPSHOT.jar,\
+               lib/imageio-ext-netcdf-1.1-SNAPSHOT.jar,\
+               lib/imageio-ext-netcdf-core-1.1-SNAPSHOT.jar,\
+               lib/imageio-ext-utilities-1.1-SNAPSHOT.jar,\
+               lib/jiffle-1.0-20091221.120011-3.jar,\
+               lib/netcdf-java-4.0.41.jar,\
+               lib/opendap-2.1.jar,\
+               lib/utils-1.0-SNAPSHOT.jar,\
+               lib/zonalstats-1.0-SNAPSHOT.jar,\
+               lib/imageio-ext-geocore-1.1-SNAPSHOT.jar,\
+               lib/slf4j-api-1.5.6.jar,\
+               lib/slf4j-log4j12-1.5.6.jar
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
