--- a/plugins/net.refractions.udig.libs/copy.properties
+++ b/plugins/net.refractions.udig.libs/copy.properties
@@ -7,6 +7,8 @@ updateStableURL=http://download.osgeo.org/webdav/geotools
 # used for snapshot releases
 updateSnapshotURL=http://repo.opengeo.org
 
+jaitoolsmaven=http://oss.sonatype.org/content/repositories/snapshots/
+
 # older update url from refractions
 # updateURL=http://lists.refractions.net/m2
 
