--- a/plugins/net.refractions.udig.libs/copy.properties
+++ b/plugins/net.refractions.udig.libs/copy.properties
@@ -29,5 +29,5 @@ mirror=http://mirrors.ibiblio.org/pub/mirrors/maven2
 
 repo=file:///${user.home}/.m2/repository
 
-geotools.version=2.6.1
+geotools.version=2.6-SNAPSHOT
 geoapi.version=2.3-M1
